# program-vjgaur-1

anchor_project/: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
anchor_project/programs/tipping_program/: Cargo.toml
anchor_project/programs/tipping_program/src/: lib.rs
anchor_project/tests/: tipping_program.ts
frontend/: package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: WalletProvider.tsx
frontend/src/idl/: tipping_program.json
