[package]
name = "tipping_program"
version = "0.1.0"
description = "A simple tipping program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tipping_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
